test: update 예외 검증 테스트 추가 작성